@@ -2,6 +2,7 @@
 -----
 1. Add categories when browsing into years. e.g. My Music / Years / 2021 /
    Genres / Hard Rock / Albums
+2. Add basic 'swap' queue command.
 
 2.3.5
 -----
